# Satellite_S5P

./: .env.example  .gitignore  README.md  app_run.py  file_retention_manager.py  main.py  main_earthdata.py  plot_nc.py  pyproject.toml  read_nc.py  read_shp.py  requirements.txt  run_pipeline.py  tox.ini
.github/workflows/: cleanup.yml  pytest.yml
automation/: run_pipeline.py
docs/: GEMS_API_README.md  GEMS_Himawari_API_README.md  Himawari_API_README.md  MODIS_AOD_Variables_README.md  MODIS_HDF_Merge_README.md
examples/: ECMWF_ERA5.py  ESA_Sentinel3.py  ESA_Sentinel5P.py  NASA_MODIS.py  NESC_GEMS.py  demo_progress_bar.py
merge_data/ERA5/: README.md  __init__.py  advanced_era5_merger.py  check_era5_completeness.py  era5_merge_examples.py
merge_data/MODIS/: merge_modis_hdf_example.py
merge_data/S5P/: README.md  merge_s5p_unified.py  test_interpolation_comparison.py
ncData/: NO2_202101.nc  NO2_202102.nc  NO2_202103.nc  NO2_202104.nc  NO2_202105.nc  NO2_202106.nc  NO2_202107.nc  NO2_202108.nc  NO2_202109.nc  NO2_202110.nc  NO2_202111.nc  NO2_202112.nc  NO2_202201.nc  NO2_202202.nc  NO2_202203.nc  NO2_202204.nc  NO2_202205.nc  NO2_202206.nc  NO2_202207.nc  NO2_202208.nc  NO2_202209.nc  NO2_202210.nc  NO2_202211.nc  NO2_202212.nc
src/: __init__.py  main.py
src/api/: __init__.py  auth.py  core.py  downloader.py  earthdata_api.py  era5_api.py  gems_api.py  himawari_api.py  modis_api.py  s5p_pal.py  sentinel_api.py
src/config/: __init__.py  catalog.py  credentials.py  richer.py  settings.py  setup.py
src/coverage/: README.md  SCHEMA.md  __init__.py  base.py  cli.py  engine.py  metric.py  reader.py  region.py  registry.py
src/merge/: README.md  __init__.py  cli.py  engine.py
src/processing/: __init__.py  data_processor.py  gems_processor.py  grid_frame.py  interpolators.py  modis_daily_grid.py  modis_processor.py  sentinel_processor.py  taiwan_frame.py
src/processing/l3/: README.md  __init__.py  granule.py  pipeline.py  regridder.py  writer.py
src/processing/l3/adapters/: __init__.py  base.py  s5p.py
src/utils/: extract_datetime_from_filename.py  file_retention_manager.py  logger.py
src/visualization/: gif.py  gif_nc.py  plot_nc.py  plot_taiwan.py  plot_taiwan_power_plant.py  read_shp.py  sample_plot_nc.py
tests/: test_basic.py
空氣品質監測站/: 空氣品質監測站位置圖_121_10704.dbf  空氣品質監測站位置圖_121_10704.sbn  空氣品質監測站位置圖_121_10704.sbx  空氣品質監測站位置圖_121_10704.shp  空氣品質監測站位置圖_121_10704.shp.xml  空氣品質監測站位置圖_121_10704.shx
